# ms-e226-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: __main__.py  main.py  original_dataset.py
core/classification/: logistic_regression.py  main.py
core/classification/neural_networks/: commands.py  multi_layer_model.py  one_layer_model.py  perceptron.py
core/classification/simple_logistic_regression/: logistic_regression_galaxy.py  logistic_regression_quasar.py  logistic_regression_star.py
core/config/: logging.py
core/constants/: columns.py  task.py
core/exploration/: plots.py
core/preprocessing/: main.py
core/regression/: lasso_lambda_selection.py  lasso_with_squares.py  main.py  ols_model.py  ols_model_on_heldout.py  ols_model_subset_cov.py  one_layer_perceptron.py
core/regression/neural_networks/: multi_layer_model.py  one_layer_model.py  perceptron.py
core/regression/one_layer_perceptron/: nn_model.py  one_layer_perceptron.py
docs/: dataset-about.md  project1_answers.md  project1_handout.html
