[tool.poetry]
name = "ms-e226-project"
version = "0.1.0"
description = ""
authors = ["Pierre-Amaury Laforcade <pa.laforcade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
argparse = "^1.4.0"
torch = "^2.1.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
